# py-venmo

./: .gitignore  README.md  default_headers.json  pyproject.toml
docs/: conf.py  index.rst
venmo_api/: __init__.py  venmo.py
venmo_api/apis/: api_client.py  api_util.py  auth_api.py  exception.py  logging_session.py  payment_api.py  user_api.py
venmo_api/apis_prepydantic/: payment_api.py  user_api.py
venmo_api/models/: base_model.py  comment.py  eligibility_token.py  exception.py  fee.py  json_schema.py  mention.py  page.py  payment.py  payment_method.py  transaction.py  us_dollars.py  user.py
venmo_api/models_prepydantic/: comment.py  json_schema.py
venmo_api/utils/: __init__.py  api_client.py  api_util.py  logging_session.py  model_util.py
