[project]
name = "venmo-api"
version = "1.0.0"
description = "Venmo API client for Python"
readme = "README.md"
authors = [
    { name = "Mark Mohades"},
]
license = "GPL-3.0-only"
license-files = [
    "LICENSE"
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "devtools>=0.12.2",
    "dinero>=0.4.0",
    "loguru>=0.7.3",
    "orjson>=3.11.3",
    "pydantic>=2.12.4",
    "requests>=2.19.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
